--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,12 @@ description: Solutions for things in IT...
 # List of links in the navigation bar
 navbar-links:
   Projects: 
-    - PostgreSQL Backup Script "https://github.com/etlweather/pg_back"
-    - Gaucho (Rancher API Client) "https://github.com/etlweather/gaucho"
-    - Git-Auto-Deploy "https://github.com/olipo186/Git-Auto-Deploy"
-    - Odoo Puppet Module "https://github.com/key-lime-box/puppet-odoo"
-    - mail - Java Mail Wrapper "https://github.com/key-lime-box/mail"
-    - SimpleMQ "https://github.com/key-lime-box/simplemq"
+    - PostgreSQL Backup Script: "https://github.com/etlweather/pg_back"
+    - Gaucho (Rancher API Client): "https://github.com/etlweather/gaucho"
+    - Git-Auto-Deploy: "https://github.com/olipo186/Git-Auto-Deploy"
+    - Odoo Puppet Module: "https://github.com/key-lime-box/puppet-odoo"
+    - mail - Java Mail Wrapper: "https://github.com/key-lime-box/mail"
+    - SimpleMQ: "https://github.com/key-lime-box/simplemq"
 
 
 # Image to show in the navigation bar - image must be a square (width = height)
